@@ -9,7 +9,6 @@ version          = 0.39
 :version      = 2.11
 release_tests = 1
 travis_status = 1
-installer     = ModuleBuild
 test2_v0      = 1
 
 [RemovePrereqs]
@@ -70,4 +69,11 @@ contributor = José Joaquín Atria
 contributor = Kivanc Yazan
 
 [Meta::Dynamic::Config]
+
+[DynamicPrereqs]
+; if Crypt::Random::Source is installed,
+; require at least version 0.08 to avoid
+; deprecation messages from Class::MOP
+-condition = can_use('Crypt::Random::Source')
+-body      = requires('Crypt::Random::Source', '0.08')
 
