@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - Add close_code, close_reason and close_error properties to AnyEvent::Connection
+  - Significant refactor of the test suite that reduces dependencies on Mojolicious
+  - Migrate to MakeMaker for installer
 
 0.39      2017-07-07 18:32:02 -0400
   - Require AnyEvent 7.13 or better to address SSL/TLS error (gh#22)
